--- a/src/Console/Console.hbs
+++ b/src/Console/Console.hbs
@@ -6,13 +6,12 @@
     <span class="eruda-filter" data-filter="info">Info</span>
     <span class="eruda-filter" data-filter="log">Log</span>
     <span class="eruda-filter" data-filter="debug">Debug</span>
-    <span class="eruda-icon-info eruda-help"></span>
 </div>
 <ul class="eruda-logs"></ul>
 <div class="eruda-js-input">
     <div class="eruda-buttons">
         <div class="eruda-button eruda-cancel">Cancel</div>
-        <div class="eruda-button eruda-execute">Execute</div>
+        <div class="eruda-button eruda-execute">Apply</div>
     </div>
-    <textarea placeholder="Type JavaScript here"></textarea>
+    <textarea placeholder="Filter"></textarea>
 </div>
